RESULTS/AutoSpec/raw_results/out-4o-oopsla/026_0012/026_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/026_0012/026_merged.c:46:5: error: unterminated comment
   46 |     /*@;
      |     ^
